cluster/apps/networking/traefik/plex-docker/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-docker
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ExternalName
  ports:
    - name: https
      port: 32400
      targetPort: 32400
  externalName: "${NAS_ADDR}"
